<resources>
    <string name="app_name">ProQuiz</string>
    <string name="string_hello">Hello!</string>
    <string name="string_create_account_message">Create New Account</string>
    <string name="string_full_name">Full Name</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_confirm_password">Confirm Password</string>
    <string name="string_agreed">"I agree with the  "</string>
    <string name="string_terms_of_service">Terms and conditions</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_existing_account">"Already have an account?  "</string>
    <string name="string_log_in">Log in</string>
    <string name="string_welcome">Welcome!</string>
    <string name="string_sign_in_to_continue">Log in to continue</string>
    <string name="string_forgot_password">Forgot password?</string>
    <string name="string_new_account">"Don't have an account? "</string>
    <string name="string_update_profile">Update your profile</string>
    <string name="string_almost_done">Almost done</string>
    <string name="string_user_name">Username</string>
    <string name="string_save">Save</string>
    <string name="string_ready">Are you ready!</string>
    <string name="string_choose_a_topic">Choose a topic</string>
    <string name="string_general_knowledge">General Knowledge</string>
    <string name="string_entertainment_film">Film</string>
    <string name="string_entertainment_music">Music</string>
    <string name="string_science_and_nature">Science and nature</string>
    <string name="string_science_computer">Computer</string>
    <string name="string_science_maths">Mathematics</string>
    <string name="string_sports">Sports</string>
    <string name="string_geography">Geography</string>
    <string name="string_quizzes">Quizzes</string>
    <string name="string_difficulty">Difficulty</string>
    <string name="string_settings">Settings</string>
    <string name="string_difficulty_level">Difficulty Level</string>
    <string name="string_log_out">Log out</string>
    <string name="string_politics">Politics</string>
    <string name="string_arts">Arts</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_notification">Notification</string>
    <string name="string_sound">Sound</string>
    <string name="string_edit">EDIT</string>
    <string name="string_choose_difficulty">Choose difficulty level</string>
    <string name="string_next_question">Next</string>
    <string name="string_create_account">Create Account</string>
    <string name="string_finish">Finish</string>
</resources>